# microdata-metadata-service

./: Cargo.toml  Dockerfile  README.md  azure-pipelines.yml  backstage.yaml  build.gradle  data-store.json  metadata-all-test__1_0_0.json  pyproject.toml  settings.gradle  versions.json
.cargo/: config.toml
.github/workflows/: build_and_test_rust.yaml  pr-test.yaml  publish_public_image.yaml  test-and-build.yaml
metadata_service/: app.py
metadata_service/adapter/: datastore.py
metadata_service/api/: metadata_api.py  observability.py  request_models.py  response_models.py
metadata_service/config/: logging.py  uvicorn.py
metadata_service/domain/: metadata.py  version.py
metadata_service/exceptions/: exceptions.py
src/: api.rs  config.rs  core.rs  errors.rs  fs.rs  lib.rs  logging.rs  main.rs  models.rs
src/api/: languages.rs  metadata.rs  middleware.rs  models.rs  observability.rs
src/docs/asciidoc/: api-guide.adoc
src/fs/: models.rs
src/main/java/no/microdata/datastore/: Application.java  CSBucketService.java  MetadataService.java  MetadataServiceApplication.java
src/main/resources/: application.yaml  logback-spring.xml
src/test/java/no/microdata/datastore/: MockApplication.java  MockConfig.java
src/test/resources/: application.yaml
src/test/resources/no_ssb_test/dataset/AFIXEDDATASET/: AFIXEDDATASET__3_2.db
src/test/resources/no_ssb_test/metadata/: datastore.json  metadata-all__1_0_0.json  versions.json
tests/: test_api.rs
tests/common/: expected.rs  mod.rs  test_utils.rs
tests/resources/test_datastore/datastore/: datastore_versions.json  draft_version.json  metadata_all__DRAFT.json
tests/unit/: conftest.py
tests/unit/api/: test_api.py  test_metadata_api.py  test_request_models.py
tests/unit/domain/: test_metadata.py
(+40 files in other folders)
