[package]
name = "metadata-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
chrono = "0.4.39"
hyper = { version = "1.6.0", features = ["full", "server"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["compression-full"] }
uuid = { version = "1.12.1", features = ["v4"] }

[dev-dependencies]
hyper = "1.6.0"
reqwest = { version = "0.12.12", features = ["json"] }
tower = "0.5.2"
