[tool.poetry]
name = "metadata-service"
version = "0.0.1"
description = ""
authors = ["Microdata Developers <microdata-dev@ssb.no>"]

[tool.poetry.dependencies]
python = "^3.13"
gunicorn = "^23.0.0"
pydantic = "^2.10.0"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^6.0.0"
pytest-mock = "^3.7.0"
pytest-dotenv = "^0.5.2"
ruff = "0.11.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py313"
